Added fe form validations, confirmation popup on delete and basic shopping basket functionality implementation. "Finished" shoopping basket (looks better) and added functionality for placing orders - for logged in and also not logged in users.

--- a/BookEshop/angularapp/src/app/add-page/add-page.component.css
+++ b/BookEshop/angularapp/src/app/add-page/add-page.component.css
@@ -16,3 +16,10 @@ textarea#bookDescriptionInput {
 .form-control, .remove-btn {
   height: 40px;
 }
+
+
+
+.input {
+    color: red;
+    border-color:red;
+}
