--- a/BookEshop/angularapp/src/app/shopping-basket/shopping-basket.component.html
+++ b/BookEshop/angularapp/src/app/shopping-basket/shopping-basket.component.html
@@ -1,1 +1,86 @@
-<p>shopping-basket works!</p>
+<section class="h-100 h-custom">
+  <div class="container py-3 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col-12">
+        <div class="card card-registration card-registration-2" style="border-radius: 15px;">
+          <div class="card-body p-0">
+            <div class="row g-0">
+              <div class="col-lg-8">
+                <div class="p-5">
+                  <div class="d-flex justify-content-between align-items-center mb-5">
+                    <h1 class="fw-bold mb-0 text-black">Nákupný košík</h1>
+                    <h6 *ngIf="totalNumberOfItems == 1" class="mb-0 text-muted">{{totalNumberOfItems}} položka</h6>
+                    <h6 *ngIf="totalNumberOfItems > 1" class="mb-0 text-muted">{{totalNumberOfItems}} položky</h6>
+                  </div>
+                  <div *ngFor="let item of shoppingBasketItems">
+                    <hr class="my-4">
+
+                    <div class="row mb-4 d-flex justify-content-between align-items-center">
+                      <div class="col-md-2 col-lg-2 col-xl-2">
+                        <img src="{{item.imageURL}}"
+                             class="img-fluid rounded-3" alt="Cotton T-shirt">
+                      </div>
+                      <div class="col-md-3 col-lg-3 col-xl-3">
+                        <h6 class="text-black">{{item.bookTitle}}</h6>
+                        <div *ngFor="let author of item.bookAuthors">
+                          <h6 class="text-muted mb-0">{{item.name}} {{author.middleName}} {{author.surname}}</h6>
+                        </div>
+                      </div>
+                      <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
+                        <button class="btn btn-link px-2" (click)="lowerAmountOfItem(item)">
+                          <i class="bi bi-dash"></i>
+                        </button>
+                        <h6 class="px-2 pt-3">{{item.bookQuantity}}</h6>
+                        <button class="btn btn-link px-2" (click)="increaseAmountOfItem(item)">
+                          <i class="bi bi-plus"></i>
+                        </button>
+                      </div>
+                      <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
+                        <h6 class="mb-0">{{item.totalPrice}}</h6>
+                      </div>
+                      <div class="col-md-1 col-lg-1 col-xl-1 text-end">
+                        <button class="btn btn-link px-2" (click)="removeFromBasket(item.bookId)"><i class="bi bi-trash"></i></button>
+                      </div>
+                    </div>
+                  </div>
+                  <hr class="my-4">
+                  <div *ngIf="shoppingBasketItems.length == 0">
+                    <h6>Nákupný košík je prázdny</h6>
+                  </div>
+
+                </div>
+              </div>
+              <div class="col-lg-4 bg-grey">
+                <div class="p-5">
+                  <h3 class="fw-bold mb-5 mt-2 pt-1">Zhrnutie</h3>
+                  <hr class="my-4">
+
+                  <div class="d-flex justify-content-between mb-4">
+                    <h5 class="text">Počet položiek v košíku: {{totalNumberOfItems}}</h5>
+                  </div>
+
+
+                  <!--<div class="mb-5">
+              <div class="form-outline">
+      <input type="text" id="form3Examplea2" class="form-control form-control-lg" />
+      <label class="form-label" for="form3Examplea2">Enter your code</label>
+    </div>
+  </div> -->
+
+                  <hr class="my-4">
+
+                  <div class="d-flex justify-content-between mb-5">
+                    <h5 class="text">Celková suma: </h5>
+                    <h5>{{totalPrice}} €</h5>
+                  </div>
+
+                  <button type="button" class="btn btn-dark btn-block" (click)="order()">Pokračovať v objednávke</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
